testing code pipeline

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Steven W. Tolbert</h1>
-							<p>Personal site powered by AWS serverless technology.</p>
+							<p>Personal site powered by AWS serverless technology and imagination.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
