testing code pipeline

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Severless Dashboarding</h3>
-									<p>Demo deployment of as dashboard in a "serverless" fashion using EC2s, lambda, and API Gateway.</p>
+									<p>Demo deployment of as dashboard in a "serverless" fashion using EC2s, lambda, Fargate, and API Gateway.</p>
 									<p>
 										<form action="https://w1p6c1yxk1.execute-api.us-east-1.amazonaws.com/launch-ec2v1" method="get">
 								    	<input type="submit" value="Dashboard" 
