testing code pipeline

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Computer Vision</h3>
-									<p>The self-flying drone project. In progress.</p>
+									<p>The self-flying drone project.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
