--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>NextEra Energy Shark Tank Victor</h2>
-									<p>2019 Shark Tank winning team recieving over 250k in the form of a research grant to explore machine learning applications for grid-level event reconstruction.</p>
+									<h2>Awards, Victories, and Accolades</h2>
+									<p>Listing of acheivements in competive data science.</p>
 									<ul class="actions">
 										<li><a href="shark_tank.html" class="button">Learn more</a></li>
 									</ul>
@@ -71,13 +71,13 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/code_img.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>2019 Hackathon Challanger</h2>
-									<p>2019 Second place victory at internal hackathon for providing a serverless solution to tagging metadata within video content for machine learning applications</p>
+									<h2>Deep Learning Papers and Code</h2>
+									<p>Listing of work</p>
 									<ul class="actions">
-										<li><a href="about_me.html" class="button">Learn more</a></li>
+										<li><a href="deep_learning_papers.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
