--- a/shark_tank.html
+++ b/shark_tank.html
@@ -34,25 +34,30 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<span class="image fit"><img src="images/shark_tank_wide.png" alt="" /></span>
-							<h1 class="major">2019 NextEra Energy Shark Tank Victory</h1>
+							<h1 class="major">Awards, Victores and Accolades</h1>
+							<div>
+							<h2 class>2019 NextEra Energy Shark Tank Victory</h2> 
+							<img class = "image left" src="images/pic02.jpg" alt="" height = "300", width = "300" />
 							<p>Steven Tolbert and his team compeated in the 2019 NextEra Energy Shark Tank, a corporate wide event where employees submitted and defended proposals for executive funding. This inititive resulted in over 250 thousand dollars in research funding towards building and deploying an automated method of assiging resources based on data-driven events across the grid.</p>
+							</div><br><br><br><br><br><br>
+					
+							<div>
+								<h2>2019 Second Place Nextera Energy Internal Hackathon</h2>
+								<img class = "image left" src="images/pic03.jpg" alt="" height = "300", width = "300" />
+								<p>Steven Tolbert and his team placed second in the 2019 NextEra Energy hackathon for providing a serverless solution to tagging metadata within video content for machine learning applications. The applcation was developed over the course of 24 hours to provide a serverless method of processing video data and extracting key features for model training with limited user interaction.</p>
+							</div><br><br><br><br><br><br><br><br>
 
-
-							<p>Over the course of this project Steven developed skills in AWS allowing for the deployment of complex models at scale using serverless data solutions as well as the ability to manage resources across many teams to allow for key deliverables to be met.</p>
-						</div>
 					</section>
 
 			</div>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+		<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
