--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="https://twitter.com/Steven481561" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="https://www.kaggle.com/stolbert" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
 												<li><a href="https://github.com/stolbert481" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.linkedin.com/in/steven-tolbert/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
