--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Awards, Victories, and Accolades</h2>
-									<p>Listing of acheivements in competive data science.</p>
+									<p>Listing of acheivements in competitive data science.</p>
 									<ul class="actions">
 										<li><a href="shark_tank.html" class="button">Learn more</a></li>
 									</ul>
