--- a/nlp.html
+++ b/nlp.html
@@ -34,8 +34,8 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<span class="image fit"><img src="images/shark_tank_wide.png" alt="" /></span>
-							<h1 class="major">2019 NextEra Energy Shark Tank Victory</h1>
-							<p>Your message is predicted to have a sentiment of: </p>
+							<h1 class="major">Natural Language Processing</h1>
+							<p>Of all the recent advancements in Machine Learning as of 2020, none have been as profound or as groundbreaking as the results being produced in NLP today. Over a cast of Sesame Street characters and piles of linear algebra we are able to create intelegent systems that can interpret data in new and exciting ways.</p>
 
 
 
