--- a/deep_learning_papers.html
+++ b/deep_learning_papers.html
@@ -41,7 +41,7 @@
 							<li><a href="https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks">AlexNet Paper</a></li>
 							<li><a href ="https://github.com/stolbert481/Neural-Network-Architectures/blob/master/AlexNet/AlexNet.py">AlexNet Code</a></li>
 							<h3>ZFNet</h3>
-							<li><a href="https://arxiv.org/abs/1311.2901">ZFNet Paper</a><a href ="">||ZFNet Code</a></li>
+							<li><a href="https://arxiv.org/abs/1311.2901">ZFNet Paper</a><a href ="https://github.com/stolbert481/Neural-Network-Architectures/blob/master/ZFNet/ZFNet.py">||ZFNet Code</a></li>
 
 							<li><a href="https://arxiv.org/abs/1505.06798">VGG16 Paper</a><a href ="">||VGG16 Code</a></li>
 
@@ -54,6 +54,10 @@
 							<li><a href="https://arxiv.org/abs/1610.02357">Xception Paper</a><a href ="">||Xception Code</a></li>
 
 							<li><a href="https://arxiv.org/abs/1704.04861">MobileNet Paper</a><a href ="">||MobileNet Code</a></li>
+
+							<h2>Transformers for NLP</h2>
+							<li><a href = "https://arxiv.org/abs/1810.04805">BERT Paper</a><a href ="">||BERT Code</a></li>
+							<li><a href = "https://arxiv.org/abs/1907.11692">RoBERTa Paper</a><a href ="">||RoBERTa Code</a></li>
 
 						    <h2>Semantic Segmentation</h2>
 							<li><a href="https://arxiv.org/abs/1411.4038">FCN Paper</a><a href ="">||FCN Code</a></li>
