--- a/notes.html
+++ b/notes.html
@@ -34,10 +34,12 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Notes on Physics, Machine Learning, and Data Science</h1>
-							<p>One of the major goals of this year outside of further developing my skills as a data scientist is to further develop my skills as a physicist. After graduating with my B.S. in physics and getting into the computer science world, I have kept my love for the subject alive. The following sections will be devoted to notes on my studies in physics as I work through Feynman's path integral text and other graduate level physics work.
+							<h1 class="major">Notes on Physics</h1>
+							<h2>Statement of Purpose</h2>
+							<p>One of the major goals of this year outside of further developing my skills as a data scientist is to further develop my skills as a physicist. After graduating with my B.S. in physics and getting into the computer science world, I have kept my love for the subject alive. The following sections will be devoted to notes on my studies in physics as I work through Feynman's path integral text and other graduate level physics work including Landau and Liftshitz Mechanics, and Jackson's E&M. This section will be updated as time permits. 
 							</p>
-
+							<h2>Landau and Lifshitz Mechanics Notes</h2>
+							<li><a href="./pdf/LLChapter1Notes.pdf">Chapter 1 Notes and Selected Problems</a></li>
 
 
 
