--- a/about_me.html
+++ b/about_me.html
@@ -34,10 +34,12 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Steven W. Tolbert, Data Explorer</h1>
-							<p>Steven Tolbert is a dedicated researcher looking to find key insights within data that provides real business value and encourages the adoption of new strategies and techniques that drive business forward. Steven began his research career studying quantum black holes at the large hadron collider within the compact muon solenoid experiment using physics and classical statistical tools to search for quantum black holes under the large extra dimensions as proposed by the ADD model. The results of this research can be read here: https://fsu.digital.flvc.org/islandora/object/fsu%3A487174</p>
-
-
-							<p>After university, Steven went on to work for FPL within their reliability analytics team. The reliability analytics team at FPL is a dedicated research group which searches for anomalous behavior within the grid to prevent power-outages before they happen. While working with the reliability analytics team Steven has produced and deployed several models that detects likely outages and sends out resources to fix the issue before the power goes out.</p>
+							<img class = "image left" src="images/pic01.png" alt="" height = "300", width = "300" />
+							<h3>Statement of Purpose</h3>
+							<p>Steven Tolbert is a dedicated researcher looking to find key insights within data that provides real business value and encourages the adoption of new strategies and techniques that drive business forward. Steven began his research career studying quantum black holes at the large hadron collider within the compact muon solenoid experiment using physics and classical statistical tools to search for quantum black holes under the large extra dimensions as proposed by the ADD model. After university, Steven went on to work for FPL within their reliability analytics team. The reliability analytics team at FPL is a dedicated research group which searches for anomalous behavior within the grid to prevent power-outages before they happen. While working with the reliability analytics team Steven has produced and deployed several models that detects likely outages and sends out resources to fix the issue before the power goes out.</p>
+							</div><br><br><br><br><br><br>
+					
+							
 						</div>
 					</section>
 
