--- a/index.html
+++ b/index.html
@@ -178,9 +178,8 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>Quantum Lake Villas<br />
-											Boynton Beach, FL<br />
+											<h3>Geographic Area</h3>
+											<span>Boca Raton, FL<br />
 											USA</span>
 										</li>
 										<li>
