--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Deep Learning Papers and Code</h2>
-									<p>Listing of work</p>
+									<p>Listing of work and projects</p>
 									<ul class="actions">
 										<li><a href="deep_learning_papers.html" class="button">Learn more</a></li>
 									</ul>
