--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<section>
 									<span class="icon solid major fa-atom"></span>
 									<h3>Physics Projects and Notes</h3>
-									<p>Notes and solutions to various physics texts.</p>
+									<p>Notes, projects, and solutions to various physics texts.</p>
 									<ul class="actions">
 										<li><a href="notes.html" class="button">Learn more</a></li>
 									</ul>
