--- a/deep_learning_papers.html
+++ b/deep_learning_papers.html
@@ -39,47 +39,12 @@
 							<h2>Architectures</h2>
 							<h3>AlexNet</h3>
 							<li><a href="https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks">AlexNet Paper</a></li>
-							<li><a href ="https://github.com/stolbert481/Neural-Network-Architectures/blob/master/AlexNet/AlexNet.py">AlexNet Code</a></li>
+							<li><a href ="https://github.com/stevenwtolbert/Neural-Network-Architectures/blob/master/AlexNet/AlexNet.py">AlexNet Code</a></li>
 							<h3>ZFNet</h3>
-							<li><a href="https://arxiv.org/abs/1311.2901">ZFNet Paper</a><a href ="https://github.com/stolbert481/Neural-Network-Architectures/blob/master/ZFNet/ZFNet.py">||ZFNet Code</a></li>
+							<li><a href="https://arxiv.org/abs/1311.2901">ZFNet Paper</a><a href ="https://github.com/stevenwtolbert/Neural-Network-Architectures/blob/master/ZFNet/ZFNet.py">||ZFNet Code</a></li>
 
-							<li><a href="https://arxiv.org/abs/1505.06798">VGG16 Paper</a><a href ="">||VGG16 Code</a></li>
-
-							<li><a href="https://arxiv.org/abs/1704.06904">ResNet Paper</a><a href ="">||ResNet Code</a></li>
-
-							<li><a href="https://arxiv.org/abs/1409.4842">GoogleLeNet Paper</a><a href ="">||GoogleLeNet Code</a></li>
-
-							<li><a href="https://arxiv.org/abs/1512.00567">Inception Paper</a><a href ="">||Inception Code</a></li>
-
-							<li><a href="https://arxiv.org/abs/1610.02357">Xception Paper</a><a href ="">||Xception Code</a></li>
-
-							<li><a href="https://arxiv.org/abs/1704.04861">MobileNet Paper</a><a href ="">||MobileNet Code</a></li>
-
-							<h2>Transformers for NLP</h2>
-							<li><a href = "https://arxiv.org/abs/1810.04805">BERT Paper</a><a href ="">||BERT Code</a></li>
-							<li><a href = "https://arxiv.org/abs/1907.11692">RoBERTa Paper</a><a href ="">||RoBERTa Code</a></li>
-
-						    <h2>Semantic Segmentation</h2>
-							<li><a href="https://arxiv.org/abs/1411.4038">FCN Paper</a><a href ="">||FCN Code</a></li>
-							<li><a href="https://arxiv.org/abs/1511.00561">SegNet Paper</a><a href ="">||SegNet Code</a></li>
-							<li><a href="https://arxiv.org/abs/1505.04597">UNet Paper</a><a href ="">||UNet Code</a></li>
-							<li><a href="https://arxiv.org/abs/1612.01105">PSPNet Paper</a><a href ="">||PSPNet Code</a></li>
-							<li><a href="https://arxiv.org/abs/1606.00915">DeepLab Paper</a><a href ="">||DeepLab Code</a></li>
-							<li><a href="https://arxiv.org/abs/1704.08545">ICNet Paper</a><a href ="">||ICNet Code</a></li>
-							<li><a href="https://arxiv.org/abs/1606.02147">ENet Paper</a><a href ="">||ENet Code</a></li>
-							<h2>Generative Adversarial Networks</h2>
-							<li><a href="https://arxiv.org/abs/1406.2661">GAN Paper</a><a href ="">||GAN Code</a></li>
-							<li><a href="https://arxiv.org/abs/1511.06434">DCGAN Paper</a><a href ="">||DCGAN Code</a></li>
-							<li><a href="https://arxiv.org/abs/1701.07875">WGAN Paper</a><a href ="">||WGAN Code</a></li>
-							<li><a href="https://arxiv.org/abs/1611.07004">Pix2Pix Paper</a><a href ="">||Pix2Pix Code</a></li>
-							<li><a href="https://arxiv.org/abs/1703.10593">CycleGAN Paper</a><a href ="">||CycleGAN Code</a></li>
-							<h2>Object Detection</h2>
-							<li><a href="https://arxiv.org/abs/1311.2524">RCNN Paper</a><a href ="">||RCNN Code</a></li>
-							<li><a href="https://arxiv.org/abs/1504.08083">Fast-RCNN Paper</a><a href ="">||Fast-RCNN Code</a></li>
-							<li><a href="https://arxiv.org/abs/1506.01497">Faster-RCNN Paper</a><a href ="">||Faster-RCNN Code</a></li>
-							<li><a href="https://arxiv.org/abs/1512.02325">SSD Paper</a><a href ="">||SSD Code</a></li>
-							<li><a href="https://arxiv.org/abs/1506.02640">YOLO Paper</a><a href ="">||YOLO Code</a></li>
-							<li><a href="https://arxiv.org/abs/1612.08242">YOLO 9000 Paper</a><a href ="">||YOLO 9000 Code</a></li>
+							<h3>Multi-Variate Time Series Classification</h3>
+							<li><a href = "">MLSTM-FCN</a></li>
 
 
 						</div>
