--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 									<h2>Deep Learning Papers and Code</h2>
 									<p>Listing of work and projects</p>
 									<ul class="actions">
-										<li><a href="deep_learning_papers.html" class="button">Learn more</a></li>
+										<li><a href="deep_learning_papers.html" class="button">Projects</a></li>
+										<li><a href="notes_ml.html" class = "button">Notes</a></li>
 									</ul>
 								</div>
 							</div>
