--- a/notes.html
+++ b/notes.html
@@ -21,7 +21,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about_me.html">About Me</a></li>
-						<li><a href="notes.html" class = "active">Notes</a></li>
+						<li><a href="notes.html" class = "active">Physics Notes</a></li>
+						<li><a href="notes_ml.html">Machine Learning Notes</a></li>
 						<li><a href="projects.html">Projects</a></li>
 
 					</ul>
