--- a/about_me.html
+++ b/about_me.html
@@ -21,7 +21,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about_me.html" class="active">About Me</a></li>
-						<li><a href="notes.html">Notes</a></li>
+						<li><a href="notes.html">Physics Notes</a></li>
+						<li><a href="notes_ml.html">Machine Learning Notes</a></li>
 						<li><a href="projects.html">Projects</a></li>
 					</ul>
 				</nav>
