--- a/deep_learning_papers.html
+++ b/deep_learning_papers.html
@@ -21,7 +21,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about_me.html">About Me</a></li>
-						<li><a href="notes.html">Notes</a></li>
+						<li><a href="notes.html">Physics Notes</a></li>
+						<li><a href="notes_ml.html">Machine Learning Notes</a></li>
 						<li><a href="projects.html" class = "active">Projects</a></li>
 
 					</ul>
