--- a/shark_tank.html
+++ b/shark_tank.html
@@ -22,6 +22,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html">About Me</a></li>
 						<li><a href="notes.html">Notes</a></li>
+						<li><a href="notes_ml.html">Machine Learning Notes</a></li>
 						<li><a href="projects.html" class = "active">Projects</a></li>
 					</ul>
 				</nav>
