--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 							<h1 class="major">Listing of Professional Work </h1>
 							<li>Using XGBoost to do predict power outages for customers.</li>
 							<p>On the grid there exists a vast amount of tabular data, that once cleaned and prepped can provide insight into determining if a true power outage has occurred and to send a resource out to fix it.</p>
-							<li>Analyzing multivariate time-series data to make a predictive model to detect single phase open neutrals on the grid<li>
+							<li>Analyzing multivariate time-series data to make a predictive model to detect single phase open neutrals on the grid</li>
 							<p>Without a reference to ground, determining a single phase open neutral condition is a fairly difficult task. For this project we produced experimental data in a lab to create a model that was then tuned and trained for live data from the grid.</p>
 							<li>Creating a AI ticket response system and pipeline that can accurately determine the correct resource to send for a given outage.</li>
 							<p>A complete end-to end pipeline that monitors incoming tickets, gathers all relevant data, and assigns the correct resource to fix the issue. </p>
