--- a/loss_functions.html
+++ b/loss_functions.html
@@ -35,11 +35,12 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">On Machine Learning and Data Science</h1>
-							<p>The following sections will be devoted to my notes on machine learning, and data science. I hope that others will find these useful as they go on their own machine-learning journey.</p>
-							<h2>Loss Functions</h2>
-							<p>At its core machine learning, described in one sentence, is the optimization of a loss function. All of machine learning boils down to this core principle and as such a in-depth understanding of loss functions should be considered prerequisite knowledge for those looking to get into machine learning in any serious capacity.</p>
-							<li><a href="loss_functions.html" class="button">Loss Functions</a></li>
+							<h1 class="major">Loss Functions</h1>
+							<h3>Loss Functions for Regression</h3>
+							<p>One of the first loss functions we're introduced to in machine learning for regression tasks is the mean squared error (MSE) loss function which describes how far away our predictions stray from the true value i.e. error = (target-prediction). We square this term as this creates a quadratic learning surface that guarantees convergence when optimizing our function. When using the MSE loss function it is assumed that the distribution of our target variable is Gaussian, which applies to a large class of problems. It is also common to calculate the root mean squared error (RMSE) which is simply the square root of the MSE which provides the standard deviation of the MSE. The problems with these loss function however arise when the spread of values for target variable is large. For example, given a regression problem where our target variable ranges from 1 to 1 million we can produce very large error terms that are further compounded by the squaring of the error. It is the case then, when your target variable has a large spread, the mean squared logarithmic error (MSLE) loss becomes more suitable. If your target variable is mostly Gaussian with the exception of a few outliers the mean absolute error (MAE) becomes more suitable.</p>
+							
+							<p>MSLE is calculate the same as MSE with the exception that now we're taking the natural log the predicted quantity which of course reduces the penalty for numerically large errors. MAE is also calculated in the same manner as MSE and MSLE with the exception that now you're calculating the absolute value of the error which provides a loss function more robust to outliers.</p>
+							<h3>Loss Functions for Classification</h3>
 
 
 					
