--- a/loss_functions.html
+++ b/loss_functions.html
@@ -41,6 +41,7 @@
 							
 							<p>MSLE is calculate the same as MSE with the exception that now we're taking the natural log the predicted quantity which of course reduces the penalty for numerically large errors. MAE is also calculated in the same manner as MSE and MSLE with the exception that now you're calculating the absolute value of the error which provides a loss function more robust to outliers.</p>
 							<h3>Loss Functions for Classification</h3>
+							<p>For classification tasks cross-entropy becomes a more suitable loss function. In short, cross-entropy describes the similatrity between your prediction and target variable vectors and attempts to minimize this error. For binary and mulit-class classifaction we can write this loss function as the sum of entropies for each class with respect to the target and predicted varaibles.</p>
 
 
 					
