--- a/notes_ml.html
+++ b/notes_ml.html
@@ -39,7 +39,7 @@
 							<p>The following sections will be devoted to my notes on machine learning, and data science. I hope that others will find these useful as they go on their own machine-learning journey.</p>
 							<h2>Loss Functions</h2>
 							<p>At its core machine learning, described in one sentence, is the optimization of a loss function. All of machine learning boils down to this core principle and as such a in-depth understanding of loss functions should be considered prerequisite knowledge for those looking to get into machine learning in any serious capacity.</p>
-							<li><a href="loss_functions.html" class="button">Loss Functions</a></li>
+							<a href="loss_functions.html" class="button">Loss Functions</a>
 
 
 					
