--- a/loss_functions.html
+++ b/loss_functions.html
@@ -43,6 +43,12 @@
 							<h3>Loss Functions for Classification</h3>
 							<p>For classification tasks cross-entropy becomes a more suitable loss function. In short, cross-entropy describes the similatrity between your prediction and target variable vectors and attempts to minimize this error. For binary and mulit-class classifaction we can write this loss function as the sum of entropies for each class with respect to the target and predicted varaibles.</p>
 
+							<p>
+							  When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
+							  \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
+							</p>
+
+
 
 					
 						
@@ -64,6 +70,8 @@
 			</footer>
 
 		<!-- Scripts -->
+			<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+			<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
