--- a/loss_functions.html
+++ b/loss_functions.html
@@ -39,7 +39,7 @@
 							<h3>Loss Functions for Regression</h3>
 							<p>One of the first loss functions we're introduced to in machine learning for regression tasks is the mean squared error (MSE). To understand MSE first we must understand error. Error describes how far away our predictions stray from the true value i.e. error = (target-prediction). More mathematically, we can describe our target value as \(y_{i}\) which describes the ground truth value for instance i. We can then define our predicted value for that insatnce as \(\hat{y}_{i}\).</p>
 
-							<p>$$Error = y_{i}-\hat{y}_{i}$$</p>
+							<p>$$error = y_{i}-\hat{y}_{i}$$</p>
 
 							<p>
 							For MSE we square the error term as this creates a quadratic learning surface that guarantees convergence when optimizing our function. As with all loss functions, we want to know the error over all instances therefore we sum over all squared errors, and then divide it by the number of instances to get an idea of how much each instance is contributing to the error on average.</p>
@@ -63,7 +63,11 @@
 							<p>$$MAE =\frac{1}{N}\sum_{i=0}^{N} |y_{i}-\hat{y}_{i}|$$</p>
 
 							<h3>Loss Functions for Classification</h3>
-							<p>For classification tasks cross-entropy becomes a more suitable loss function. In short, cross-entropy describes the similatrity between your prediction and target variable vectors and attempts to minimize this error. For binary and mulit-class classifaction we can write this loss function as the sum of entropies for each class with respect to the target and predicted varaibles.</p>
+							<p>For classification tasks cross-entropy becomes a more suitable loss function. In short, cross-entropy describes the similatrity between your prediction and target variable vectors and attempts to minimize this error, or rather the distance between the two probability distributions. For binary and mulit-class classifaction we can write this loss function as the sum of entropies for each class with respect to the target and predicted varaibles. For binary cross entropy (BCE) this is described as follows. </p>
+
+							<p>$$BCE = -\frac{1}{N}\sum_{i=0}^{N} y_{i}\log_{2}(\hat{y}_{i})+(1-y_{i})log_{2}(1-\hat{y_{i}}) $$</p>
+
+
 
 							
 
