--- a/deep_learning_papers.html
+++ b/deep_learning_papers.html
@@ -39,8 +39,7 @@
 							<p>The following deep learning papers have been implemented and deployed</p>
 							<h2>Architectures</h2>
 							<h3>AlexNet</h3>
-							<li><a href="https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks">AlexNet Paper</a></li>
-							<li><a href ="https://github.com/stevenwtolbert/Neural-Network-Architectures/blob/master/AlexNet/AlexNet.py">AlexNet Code</a></li>
+							<li><a href="https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks">AlexNet Paper</a><a href ="https://github.com/stevenwtolbert/Neural-Network-Architectures/blob/master/AlexNet/AlexNet.py">||AlexNet Code</a></li>
 							<h3>ZFNet</h3>
 							<li><a href="https://arxiv.org/abs/1311.2901">ZFNet Paper</a><a href ="https://github.com/stevenwtolbert/Neural-Network-Architectures/blob/master/ZFNet/ZFNet.py">||ZFNet Code</a></li>
 
