--- a/projects.html
+++ b/projects.html
@@ -37,15 +37,23 @@
 						<div class="inner">
 							<h1 class="major">Listing of Professional Work </h1>
 							<li>Using XGBoost to do predict power outages for customers.</li>
+
 							<p>On the grid there exists a vast amount of tabular data, that once cleaned and prepped can provide insight into determining if a true power outage has occurred and to send a resource out to fix it.</p>
+
 							<li>Analyzing multivariate time-series data to make a predictive model to detect single phase open neutrals on the grid</li>
+
 							<p>Without a reference to ground, determining a single phase open neutral condition is a fairly difficult task. For this project we produced experimental data in a lab to create a model that was then tuned and trained for live data from the grid.</p>
+
 							<li>Creating a AI ticket response system and pipeline that can accurately determine the correct resource to send for a given outage.</li>
-							<p>A complete end-to end pipeline that monitors incoming tickets, gathers all relevant data, and assigns the correct resource to fix the issue. </p>
+
+							<p>A complete end-to end pipeline that monitors incoming tickets, gathers all relevant data, and assigns the correct resource to fix the issue. This project was funded through a research grant earned through competing in a company wide competition.</p>
+
 							<li>Monitoring algorithm for determining trending events on the grid.</li>
 							<p>Algorithm that tracks all events on the grid and determines if there is an uptrend in some event class.</p>
+
 							<li>Filter system designed to remove all upstream noise for a given event on the grid.</li>
 							<p>On the grid, due to all the interdependencies of systems, noise generated from an unrelated event can produce a positive signal for a model. Due to this, a robust filter system must be made pulling and linking all data from all systems to ensure events are clean from extraneous noise.</p>
+
 							<h1 class = "major">Listing of Personal Work</h1>
 							<li>RoBERTa as a question and answer model to find the phrase that most accurately produces the target sentiment</li>
 							<p>Using RoBERTa I was able to produce a question and answer system that was able to find the indexes tagging the part of phrase that most accurately represented the predicted sentiment with a fairly high confidence. This project took advantage of PyTorch and TPUs to produce a quickly trained, complex, and robust model.</p>
