--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									<p>Demo deployment of as dashboard in a "serverless" fashion using EC2s, lambda, Fargate, and API Gateway.</p>
 									<p>
 										<form action="https://w1p6c1yxk1.execute-api.us-east-1.amazonaws.com/launch-ec2v1" method="get">
-								    	<input type="submit" value="Dashboard" 
+								    	<input type="submit" value="Launch Dashboard!" 
 								         name="Submit" id="launch_dashboard_api" />
 										</form>							
 									</p>
@@ -115,7 +115,10 @@
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Computer Vision</h3>
-									<p>The self-driving car project.</p>
+									<p>Details on work done for computer vision projects such as self-driving cars, and image segmentation at scale.</p>
+									<ul class="actions">
+										<li><a href="computer_vision_project.html" class="button">AI Vrrroom</a></li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -128,7 +131,7 @@
 								<section>
 									<span class="icon solid major fa-atom"></span>
 									<h3>Physics Projects and Notes</h3>
-									<p>Notes, projects, and solutions to various physics texts.</p>
+									<p>Notes, projects, and solutions to various physics problems that I've found interestering.</p>
 									<ul class="actions">
 										<li><a href="notes.html" class="button">Learn more</a></li>
 									</ul>
@@ -142,9 +145,7 @@
 									</ul>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="projects.html" class="button">Learn more</a></li>
-							</ul>
+							
 						</div>
 					</section>
 
