--- a/about_me.html
+++ b/about_me.html
@@ -42,7 +42,9 @@
 							<li>Master of Science in Artificial Intelligence FAU 2022</li>
 							<li>Bachelor of Science in Electrical Engineering Concentrations in Power Systems and Embedded Computing FIU 2021</li>
 							<li>Bachelor of Science in Physics with a Minor in Mathematics FSU 2018</li>
+							<a href = "./pdf/CeD.18EB-B2FD-S5T1.200117460.05052018.Bachelor_of_Science.pdf">FSU B.S. Physics Diploma</a>
 							<li>Bachelor of Science in Mathematics with a Minor in English FSU 2018</li>
+							<a href = "./pdf/CeD.1856-A74E-S4T5.200117460.05052018.Bachelor_of_Science.pdf">FSU B.S. Mathematics Diploma</a>
 							</div><br><br><br><br><br><br>
 							
 
