removed live-run functionality until spam fix implemented

--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
 									<h3>Severless Dashboarding</h3>
 									<p>Demo deployment of as dashboard in a "serverless" fashion using EC2s, lambda, Fargate, and API Gateway.</p>
 									<p>
-										<form action="https://w1p6c1yxk1.execute-api.us-east-1.amazonaws.com/launch-ec2v1" method="get">
+										<!--<form action="https://w1p6c1yxk1.execute-api.us-east-1.amazonaws.com/launch-ec2v1" method="get">
 								    	<input type="submit" value="Launch Dashboard!" 
 								         name="Submit" id="launch_dashboard_api" />
-										</form>							
+										</form>-->
+										<a href="dashboarding.html" class="button">Dashboarding</a>							
 									</p>
 								</section>
 								<section>
