new project details

--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,9 @@
 							<h1 class = "major">Listing of Personal Work</h1>
 							<li>RoBERTa as a question and answer model to find the phrase that most accurately produces the target sentiment</li>
 							<p>Using RoBERTa I was able to produce a question and answer system that was able to find the indexes tagging the part of phrase that most accurately represented the predicted sentiment with a fairly high confidence. This project took advantage of PyTorch and TPUs to produce a quickly trained, complex, and robust model.</p>
+
+							<li>Reddit /r/WatchExchange Bot</li>
+							<p>Built a serverless AWS application that uses the reddit API to scan for keywords in /r/WatchExchange. The application then sends me a text if a keyword is found in a post that I have not seen before. This application uses dynamoDB as the backend database to store the unique ids of posts that it has already parsed. The full program and architechture can be found on by github linked <a href = "https://github.com/stevenwtolbert/WatchExchangeNotificationSystem">here</a>. </p>
 							
 
 
