--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 							<p>Personal site powered by AWS serverless technology and imagination.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="./pdf/resume.pdf" class="button">Resume</a></li>
 							</ul>
 						</div>
 					</section>
