--- a/index.html
+++ b/index.html
@@ -97,29 +97,29 @@
 									<span class="icon solid major fa-comment"></span>
 									<h3>Natural Language Processing</h3>
 									<div class="field">
-										<p>Type and submit a sentence for state of the art NLP to sentemize it using lambda functions and BERT.</p>
-										<a href="nlp.html" class="button">Sentimize Sentences!</a>
+										<p>Details of work done in NLP.</p>
+										<a href="nlp.html" class="button">Learn more</a>
 									</div>
 									
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Severless Dashboarding</h3>
-									<p>Demo deployment of as dashboard in a "serverless" fashion using EC2s, lambda, Fargate, and API Gateway.</p>
+									<p>Details of work done in Dashboarding</p>
 									<p>
 										<!--<form action="https://w1p6c1yxk1.execute-api.us-east-1.amazonaws.com/launch-ec2v1" method="get">
 								    	<input type="submit" value="Launch Dashboard!" 
 								         name="Submit" id="launch_dashboard_api" />
 										</form>-->
-										<a href="dashboarding.html" class="button">Dashboarding</a>							
+										<a href="dashboarding.html" class="button">Learn more</a>							
 									</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Computer Vision</h3>
-									<p>Details on work done for computer vision projects such as self-driving cars, and image segmentation at scale.</p>
+									<p>Details on work done for computer vision projects such as real time threat detection and AI for self driving cars.</p>
 									<ul class="actions">
-										<li><a href="computer_vision_project.html" class="button">AI Vrrroom</a></li>
+										<li><a href="computer_vision_project.html" class="button">Learn more</a></li>
 									</ul>
 								</section>
 								<section>
