--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,9 @@
 							<p>On the grid, due to all the interdependencies of systems, noise generated from an unrelated event can produce a positive signal for a model. Due to this, a robust filter system must be made pulling and linking all data from all systems to ensure events are clean from extraneous noise.</p>
 
 							<h1 class = "major">Listing of Personal Work</h1>
+							<li>Threat Detection and Monitoring</li>
+							<p>Created a theoretical framework for detecting and monitoring threat in real time using an ensamble of AI models. An overview of this framework can be read <a href = "./pdf/threat_detection.pdf">here</a>. </p>
+
 							<li>RoBERTa as a question and answer model to find the phrase that most accurately produces the target sentiment</li>
 							<p>Using RoBERTa I was able to produce a question and answer system that was able to find the indexes tagging the part of phrase that most accurately represented the predicted sentiment with a fairly high confidence. This project took advantage of PyTorch and TPUs to produce a quickly trained, complex, and robust model.</p>
 
