--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 				</div>
 			</footer>
 
-		<!-- Scripts -->
+<!-- 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -294,7 +294,7 @@
 	         }});
 	     }
 
-			</script>
+			</script> -->
 
 
 	</body>
