--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+<!-- 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
@@ -210,7 +210,7 @@
 						</div>
 					</section>
 
-			</div>
+			</div> -->
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
@@ -221,7 +221,7 @@
 				</div>
 			</footer>
 
-<!-- 		<!-- Scripts -->
+		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -294,7 +294,7 @@
 	         }});
 	     }
 
-			</script> -->
+			</script>
 
 
 	</body>
